[gd_scene load_steps=4 format=3 uid="uid://csh47yk7h1rjw"]

[ext_resource type="Script" path="res://entities/zombies/normal/normal_zombie_script.gd" id="1_d2pgp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h2ugd"]
size = Vector2(32, 64)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_nj68b"]
radius = 8.0
height = 64.0

[node name="NormalZombie" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 3
safe_margin = 0.001
script = ExtResource("1_d2pgp")

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_h2ugd")

[node name="ProvisionalSprite" type="ColorRect" parent="."]
z_index = 4
z_as_relative = false
offset_left = -16.0
offset_top = -32.0
offset_right = 16.0
offset_bottom = 32.0
color = Color(0.5, 0, 0, 1)

[node name="AttackZones" type="Area2D" parent="."]
position = Vector2(16, 0)
collision_layer = 3

[node name="Collision" type="CollisionShape2D" parent="AttackZones"]
scale = Vector2(0.5, 1)
shape = SubResource("CapsuleShape2D_nj68b")

[node name="NavAgent" type="NavigationAgent2D" parent="."]
debug_enabled = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[connection signal="body_entered" from="AttackZones" to="." method="_on_attack_zones_body_entered"]
[connection signal="body_exited" from="AttackZones" to="." method="_on_attack_zones_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
